--- a/unipay/templates/wechatpay.html
+++ b/unipay/templates/wechatpay.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Scan the below QR code with WeChat</h1>
+    <h1>请截图保存此二维码并手动使用相册扫码</h1>
     <img src="{{ wechatpay_qr }}" alt="WeChat QR Code">
 </body>
 
